fixed responsive spacing of the carosel HomePage

--- a/HomePage/style.css
+++ b/HomePage/style.css
@@ -15,6 +15,15 @@ body {
   height: 240vh;
 }
 
+@media only screen and (max-width: 400px) {
+
+
+  
+
+
+
+}
+
 @media only screen and (min-width: 401px) and (max-width: 960px) {
   #navbar {
     border-bottom: solid rgba(138, 43, 226, 0.8) 3px; /* all the colors have been changed from blueviolet to the colors seen in #navbar*/
@@ -93,8 +102,314 @@ body {
     margin-right: 40px;
   }
 
+  #homepage {
+    background-color: blac;
+    height: 75vh;
+    top: 0%;
+    background-image: url("/Images/homepage-photo.jpg");
+    background-repeat: no-repeat;
+    width: 370%;
+    opacity: 0.9;
+    background-size: 100%;
+    position: absolute;
+    object-fit: cover;
+  }
 
+
+  .slogan {
+    text-align: center;
+    font-size: 60px;
+    margin-top: 16%;
+    color: white;
+    opacity: 0.9;
+    animation-name: sloganOpacity;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in-out;
+    animation-duration: 1s;
+  }
+
+  @keyframes sloganOpacity {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 0.9;
+    }
+  }
+
+  .welcome {
+    text-align: center;
+    background-image: linear-gradient(red, blac);
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 48px;
+    color: white;
+    opacity: 1;
+    animation-name: welcomeOpacity;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in;
+    animation-duration: 2.5s;
+    
+  }
+
+  @keyframes welcomeOpacity {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+
+  #aboutpage {
+    height: 100vh;
+    margin-top: 65vh;
+    background-color: whitesmoke;
+  }
+
+  .sidebyside {
+    display: flex;
+    justify-items: flex-end;
+    margin-top: 30%;
+  }
+  .about {
+    margin-left: 3%;
+  }
+
+  #aboutheader {
+    margin-top: 110px;
+    font-weight: 700;
+    font-size: 2.1vw;
+  }
+
+  #propnamecolorchange {
+    color: blueviolet;
+  }
+  #aboutpar1 {
+    font-weight: 400;
+    line-height: 140%;
+    width: 145%;
+    height: 25%;
+    text-align: left;
+  }
+  #aboutpar2 {
+    font-size: 18px;
+    width: 135%;
+    height: 25%;
+    line-height: 140%;
+    padding: 0;
+  }
+  .about-pic {
+    width: 75%;
+    margin-top: 13%;
+    margin-left: 20%;
+    height: 80%;
+    border: solid black 3px;
+    border-radius: 8px;
+  }
+
+  #about-button {
+    width: 60%;
+    height: 7%;
+    font-size: 15px;
+    border-radius: 20px;
+    background-color: blueviolet;
+    color: white;
+    margin-top: 25px;
+    border: solid blueviolet 1px;
+    cursor: pointer;
+    transition: 0.3s;
+    opacity: 0.5;
+  }
+
+  #about-button:hover {
+    opacity: 1;
+  }
+
+  #about-button a {
+    color: white;
+    text-decoration: none;
+  }
+
+  #photo-gallery {
+    height: 100vh;
+    background-color: grey;
+    border: solid transparent;
+  }
+
+  #gallery-text {
+    padding-top: 3%;
+    font-weight: 700;
+    font-size: 60px;
+    text-align: center;
+    
+    margin-bottom: 1%;
+  }
+
+  .carosel {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    
+  }
+
+  .carosel > ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+
+  .slide {
+    position: absolute;
+    inset: 0;
+    opacity: 0;
+    transition: 200ms opacity ease-in-out;
+    transition-delay: 200ms;
+  }
+
+  .slide > img {
+    display: block;
+    width: 40%;
+    height: 60%;
+    object-fit: cover;
+    object-position: center;
+    margin-left: auto;
+    margin-right: auto;
+    border: solid black 3px;
+    border-radius: 5px;
+  }
+
+  .slide[data-active] {
+    opacity: 1;
+    transition-delay: 0;
+  }
+
+  .carosel-button {
+    position: absolute;
+    background: none;
+    border: none;
+    font-size: 4rem;
+    top: 21%;
+    transform: translate(-22%);
+    z-index: 2;
+    color: rgba(255, 255, 255, 0.5);
+    cursor: pointer;
+    border-radius: 0.25rem;
+    padding: 0.5rem;
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+
+  .carosel-button:hover,
+  .carosel-button:focus {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition-duration: .5s;
+    /* the transition properties were recently added along with the size of the previous carosel button and the size of the carosel*/
+
+    transition-timing-function: linear 2s;
+  }
+
+  .carosel-button:focus {
+    outline: solid black 1px;
+  }
+
+  .carosel-button.prev {
+    margin-left: 20%;
+    height: 130px;
+    width: 100px;
+  }
+
+  .carosel-button.next {
+    margin-left: 75%;
+    height: 130px;
+    width: 100px;
+  }
+
+  .room-button{
+    margin-top: 101.5%;
+    text-align: center;
+    margin-left: 40vw;
+    width: 20%;
+    height: 6%;
+    border-radius: 15px;
+    border: none;
+    background-color: blueviolet;
+    cursor: pointer;
+    transition: 0.3s;
+    opacity: 0.5;
+    
+  }
+
+  .room-button:hover{
+    
+    opacity: 1;
+  }
+
+  .room-button>a{
+    text-decoration: none;
+    font-family: Roboto;
+    font-weight: 700;
+    font-size: 20px;
+    color: white;
+  }
+
+  
+
+  #footer-contact-info {
+    height: 40vh;
+    background-color: black;
+    color: white;
+  }
+
+  .bottom-border {
+    display: flex;
+    list-style-type: none;
+    font-weight: 500;
+  }
+
+  #bottom-logo {
+    margin-top: 10%;
+    margin-left: 10%;
+  }
+
+  .footer-slogan {
+    font-weight: 300;
+    font-size: 16px;
+    margin-left: 8px;
+  }
+
+  #ammenities {
+    margin-left: auto;
+    margin-top: 3%;
+  }
+
+  #social-media {
+    margin-right: 40px;
+    margin-top: 3%;
+  }
+
+  #ammenities > ul > li {
+    font-weight: 400;
+    padding: 10px;
+  }
+
+  #social-media > ul > li {
+    font-weight: 400;
+    padding: 10px;
+  }
+
+  .contact > li {
+    font-weight: 400;
+    padding: 10px;
+  }
+
+  .copyright {
+    text-align: center;
+  }
 }
+
 
 @media only screen and (min-width: 961px) {
   #navbar {
@@ -323,7 +638,7 @@ body {
 
   .carosel {
     width: 100vw;
-    height: 100vh;
+    height: 65vh;
     position: relative;
     
   }
@@ -344,12 +659,13 @@ body {
 
   .slide > img {
     display: block;
-    width: 40%;
-    height: 60%;
+    width: 55%;
+    height: 90%;
     object-fit: cover;
     object-position: center;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 20px;
     border: solid black 3px;
     border-radius: 5px;
   }
@@ -364,7 +680,7 @@ body {
     background: none;
     border: none;
     font-size: 4rem;
-    top: 21%;
+    top: 33%;
     transform: translate(-22%);
     z-index: 2;
     color: rgba(255, 255, 255, 0.5);
@@ -389,22 +705,21 @@ body {
   }
 
   .carosel-button.prev {
-    margin-left: 20%;
+    margin-left: 14%;
     height: 130px;
     width: 100px;
   }
 
   .carosel-button.next {
-    margin-left: 75%;
+    margin-left: 81%;
     height: 130px;
     width: 100px;
   }
 
   .room-button{
-    margin-top: 31.5%;
     text-align: center;
-    margin-left: 40vw;
-    width: 20%;
+    margin-left: 35vw;
+    width: 26%;
     height: 6%;
     border-radius: 15px;
     border: none;
@@ -412,6 +727,7 @@ body {
     cursor: pointer;
     transition: 0.3s;
     opacity: 0.5;
+    
     
   }
 
