--- a/RoomsandRates/style.css
+++ b/RoomsandRates/style.css
@@ -439,6 +439,7 @@ border: m;
 
 #bottom-logo {
   margin-top: 4%;
+  margin-bottom: 6%;
   margin-left: 10%;
   font-size: 30px;
 }
@@ -446,7 +447,7 @@ border: m;
 .footer-slogan {
   font-weight: 300;
   font-size: 16px;
-  margin-left: 8px;
+  margin-left: 10%;
 }
 
 #ammenities {
